--- a/code/join 안동시 농기계 임대차 관리대장 & 안동시 보유 농기계 목록.ipynb
+++ b/code/join 안동시 농기계 임대차 관리대장 & 안동시 보유 농기계 목록.ipynb
@@ -13701,7 +13701,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_left_join.to_csv('C:/Users/user/Desktop/NIA/project1/data/preprocessing/안동시 농기계 임대차 관리대장(18-20) & 농업경영체 정보 - left.csv', encoding = 'utf-8-sig', index = False)"
+    "df_left_join.to_csv('C:/Users/user/Desktop/NIA/project1/data/preprocessing/안동시 농기계 임대차 관리대장(18-20) & 안동시 보유 농기계 목록 - left.csv', encoding = 'utf-8-sig', index = False)"
    ]
   },
   {
@@ -13711,7 +13711,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_outer_join.to_csv('C:/Users/user/Desktop/NIA/project1/data/preprocessing/안동시 농기계 임대차 관리대장(18-20) & 농업경영체 정보 - outer.csv', encoding = 'utf-8-sig', index = False)"
+    "df_outer_join.to_csv('C:/Users/user/Desktop/NIA/project1/data/preprocessing/안동시 농기계 임대차 관리대장(18-20) & 안동시 보유 농기계 목록 - outer.csv', encoding = 'utf-8-sig', index = False)"
    ]
   }
  ],
