--- a/code/안동시 보유 농기계 목록 불순물 제거.ipynb
+++ b/code/안동시 보유 농기계 목록 불순물 제거.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "15bd6f75",
+   "id": "1558eaba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "dc6e2439",
+   "id": "9ed996c1",
    "metadata": {
     "collapsed": true
    },
@@ -11398,6 +11398,7 @@
     "file1 = pd.read_excel('C:/Users/user/Desktop/NIA/project1/data/original/안동시 보유 농기계 목록(형식, 규격 포함)_공공데이터기준분류.xls')\n",
     "file1\n",
     "\n",
+    "\n",
     "file1 = file1.drop(index=[0, 1], axis=0)\n",
     "file1 = file1.drop(columns=['Unnamed: 4', 'Unnamed: 11'], axis=1)\n",
     "file1 = file1.rename(columns=file1.iloc[0])\n",
@@ -11408,7 +11409,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "e64e112e",
+   "id": "a87d3d60",
    "metadata": {
     "collapsed": true
    },
@@ -11436,7 +11437,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "18cc7501",
+   "id": "efbf973f",
    "metadata": {},
    "outputs": [
     {
@@ -11466,7 +11467,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "42b42494",
+   "id": "7e064511",
    "metadata": {},
    "outputs": [
     {
@@ -23485,7 +23486,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "eb35b41c",
+   "id": "aebae8de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23494,19 +23495,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "4c86cb01",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file1.to_csv('C:/Users/user/Desktop/NIA/project1/data/preprocessing/안동시 보유 농기계 목록.csv', encoding = 'utf-8-sig', index = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 127,
-   "id": "18c25313",
-   "metadata": {},
+   "id": "3d01131f",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -25099,11 +25092,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0ee19a4e",
+   "execution_count": 128,
+   "id": "0573258e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "file1.to_csv('C:/Users/user/Desktop/NIA/project1/data/preprocessing/안동시 보유 농기계 목록.csv', encoding = 'utf-8-sig', index = False)"
+   ]
   }
  ],
  "metadata": {
