Update 농기계 불순물 제거 및 제거 후 join.ipynb

--- a/code/농기계 불순물 제거 및 제거 후 join.ipynb
+++ b/code/농기계 불순물 제거 및 제거 후 join.ipynb
@@ -13592,8 +13592,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "5a92fd13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "No          0\n",
+       "임대사업장       0\n",
+       "임대기간        0\n",
+       "임대일수        0\n",
+       "주소          9\n",
+       "성별        100\n",
+       "나이          0\n",
+       "임대농기계       0\n",
+       "임대료(원)      0\n",
+       "배송방법        0\n",
+       "계           0\n",
+       "임대농기계2      0\n",
+       "구분        498\n",
+       "종류        498\n",
+       "기종        498\n",
+       "기종2       498\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_left_join.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "14ed018e",
+   "id": "ce60a305",
    "metadata": {},
    "outputs": [],
    "source": []
